--- a/MobiOptionsAds/build.gradle
+++ b/MobiOptionsAds/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
 //    implementation project(":unity-ads")
-    releaseImplementation files('libs/unity-ads.aar')
-    debugImplementation files('libs/unity-ads.aar')
     implementation project(':nativetemplates')
+
+    compileOnly files('libs/unity-ads.aar')
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
