--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'org.jetbrains:annotations:16.0.1'
+//    implementation 'org.jetbrains:annotations:16.0.1'
 
     implementation project(':MobiOptionsAds')
 }
