--- a/MobiOptionsAds/build.gradle
+++ b/MobiOptionsAds/build.gradle
@@ -1,6 +1,18 @@
 plugins {
     id 'com.android.library'
+    id 'com.github.dcendents.android-maven'
 }
+
+group='com.github.osamaedev'
+
+
+repositories {
+    mavenCentral()
+    google()
+    jcenter()
+    maven { url "https://jitpack.io" }
+}
+
 
 android {
     compileSdkVersion 30
