--- a/MobiOptionsAds/build.gradle
+++ b/MobiOptionsAds/build.gradle
@@ -54,9 +54,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
 //    implementation project(":unity-ads")
-    implementation project(':nativetemplates')
+//    implementation project(':nativetemplates')
 
     compileOnly files('libs/unity-ads.aar')
+    compileOnly files('libs/nativetemplates.aar')
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
