--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,11 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-//    implementation 'org.jetbrains:annotations:16.0.1'
-
     implementation project(':MobiOptionsAds')
-    implementation files('libs/unity-ads.aar')
-    implementation files('libs/nativetemplates.aar')
+//    implementation files('libs/unity-ads.aar')
+//    implementation files('libs/nativetemplates.aar')
 }
