--- a/MobiOptionsAds/build.gradle
+++ b/MobiOptionsAds/build.gradle
@@ -53,8 +53,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation files('libs/unity-ads.aar')
-    implementation files('libs/nativetemplates.aar')
+    compileOnly files('libs/unity-ads.aar')
+    compileOnly files('libs/nativetemplates.aar')
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
