--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation project(':MobiOptionsAds')
-//    implementation files('libs/unity-ads.aar')
-//    implementation files('libs/nativetemplates.aar')
+    implementation files('libs/unity-ads.aar')
+    implementation files('libs/nativetemplates.aar')
 }
